<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.auth.ui.LoginActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:scaleType="fitXY"
    android:weightSum="7"
    android:background="@color/blue_gradient_end">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/smart_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:elevation="36dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/card_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_phone"
                style="@style/TextNormalBlueDark"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_password"
                    style="@style/TextNormalBlueDark"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:textColor="@color/colorTextBlack"
                    android:textColorHint="@color/colorPlaceholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/eye_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="26dp"
                    android:src="@drawable/icon_eye_password"
                    app:layout_constraintBottom_toBottomOf="@id/edt_password"
                    app:layout_constraintEnd_toEndOf="@id/edt_password"
                    app:layout_constraintTop_toTopOf="@id/edt_password" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    style="@style/ButtonBlue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/tv_forgot_password"
                    style="@style/TextNormalBlueDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_20"
                    android:padding="@dimen/size_5"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login"
                    android:text="@string/forgot_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/dark_blue" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="26dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextNormalBlueDark"
                android:textSize="18sp"
                android:text="@string/no_account"
                android:layout_marginStart="12dp" />
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:text="@string/register_instead"
                style="@style/TextBoldBlueDark"
                android:layout_marginStart="12dp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>